--- a/frontend/views/references.ejs
+++ b/frontend/views/references.ejs
@@ -1,14 +1,249 @@
 <%- include('components/header') %> <%- include('components/loading') %>
-<div class="page-content">
+<div class="page-content reference-list">
   <h1>References</h1>
   <p class="note">
     Note: References for code snippets that have been inspired/reproduced from
     other sources have been included as code comments above them.
   </p>
   <p class="note">
-    Note: The following assets have been liscenced and have been edited and
-    mixed to make a distinct set of assets for the VitaFun website.
+    Note: The following assets have been liscenced and edited/mixed to make a
+    distinct set of assets for the VitaFun website.
   </p>
-  <p></p>
+  <div class="character-ref">
+    <h2>Assets used for Circus Character Images</h2>
+    <p>
+      alex_cardo. n.d. ‘Magic Wizard Items Set. Potion Auldron Magic Wand Scroll
+      Book with Spells Broom Flying Chest Cards Multicolored Energy Crystals
+      Witchs Hat Bottles Prepared Liquid Ball Predictions. Cartoon Vector. Stock
+      Vector’. Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/magic-wizard-items-set-potion-auldron-magic-wand-scroll-book-with-spells-broom-flying-chest-cards-multicolored-energy-crystals-witchs-hat-bottles-prepared-liquid-ball-predictions-cartoon-vector/361014647.
+    </p>
+    <p>
+      ann131313.a. n.d. ‘Black Hair Beautiful Hairstyle Black Hair Woman Set.
+      Modern Fashion for Assortment. Long Hair, Short Hair, Fringe. Curly Hair
+      Salon Hairstyles and Trendy Haircut Vector Icon Set Isolated Stock
+      Vector’. Adobe Stock. Accessed 29 January 2023a.
+      https://stock.adobe.com/au/images/black-hair-beautiful-hairstyle-black-hair-woman-set-modern-fashion-for-assortment-long-hair-short-hair-fringe-curly-hair-salon-hairstyles-and-trendy-haircut-vector-icon-set-isolated/165244659.
+    </p>
+    <p>
+      ann131313.a. n.d. ‘Boy Hair Rear View Set. Head of a Little Boy. Cute
+      Hairstyle.Variety Child Modern Fashion for Assortment. Long , Short ,
+      Curly Hair. Salon Hairstyles Trendy Haircut of Male. Vector Icon Isolated.
+      Stock Vector’. Adobe Stock. Accessed 29 January 2023b.
+      https://stock.adobe.com/au/images/boy-hair-rear-view-set-head-of-a-little-boy-cute-hairstyle-variety-child-modern-fashion-for-assortment-long-short-curly-hair-salon-hairstyles-trendy-haircut-of-male-vector-icon-isolated/201818002.
+    </p>
+    <p>
+      Apoev, Andrei. n.d. ‘Japanese, Asian Traditional Hair Bands. Floral Rope
+      Knots Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/japanese-asian-traditional-hair-bands-floral-rope-knots/522173852.
+    </p>
+    <p>
+      comicsans. n.d. ‘Vector Realistic Isolated Rope for Decoration and
+      Covering on the Transparent Background. Stock Vector’. Adobe Stock.
+      Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/vector-realistic-isolated-rope-for-decoration-and-covering-on-the-transparent-background/189804124.
+    </p>
+    <p>
+      denis_pc. n.d. ‘Retro Circus Cartoon Characters and Animals. Vintage
+      Carnival Children. Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/retro-circus-cartoon-characters-and-animals-vintage-carnival-children/122950787.
+    </p>
+    <p>
+      Happypictures. n.d. ‘Man and Woman as Circus Artists and Acrobats Lifting
+      Heavy Barbell and Balancing on Wheel Vector Set Stock Vector’. Adobe
+      Stock. Accessed 29 January 2023a.
+      https://stock.adobe.com/au/images/man-and-woman-as-circus-artists-and-acrobats-lifting-heavy-barbell-and-balancing-on-wheel-vector-set/417297085.
+    </p>
+    <p>
+      Happypictures n.d. ‘Man Wearing Street Magician Costume Performing
+      Amusement Show Vector Illustration Stock Vector’. Adobe Stock. Accessed 29
+      January 2023b.
+      https://stock.adobe.com/au/images/man-wearing-street-magician-costume-performing-amusement-show-vector-illustration/323929884.
+    </p>
+    <p>
+      Pakon. n.d. ‘Set of Clowns in Different Poses. Funny Characters in Cartoon
+      Style Isolated on White Background. Stock Vector’. Adobe Stock. Accessed
+      29 January 2023.
+      https://stock.adobe.com/au/images/set-of-clowns-in-different-poses-funny-characters-in-cartoon-style-isolated-on-white-background/333203288.
+    </p>
+    <p>
+      Tartila. n.d. ‘Superhero Man Characters. Cartoon Muscular Hero Character
+      in Colorful Super Costume with Waving Cloak. Flying Superheroes Vector Set
+      Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/superhero-man-characters-cartoon-muscular-hero-character-in-colorful-super-costume-with-waving-cloak-flying-superheroes-vector-set/213494367.
+    </p>
+    <p>
+      topvectors. n.d. ‘Pretty Young Woman Constructor in Flat Style. Parts of
+      Body Legs and Arms , Face Emotions, Haircuts and Hands Gestures. Vector
+      Cartoon Girl Character Stock Vector’. Adobe Stock. Accessed 29 January
+      2023.
+      https://stock.adobe.com/au/images/pretty-young-woman-constructor-in-flat-style-parts-of-body-legs-and-arms-face-emotions-haircuts-and-hands-gestures-vector-cartoon-girl-character/183484490.
+    </p>
+    <p>
+      Vector Tradition. n.d. ‘Circus Cartoon Characters Vector Performers, Top
+      Tent Artists Clown, Acrobat and Man Cannon Ball. Trained Dogs, Juggler,
+      Magician or Trapeze Girl, Woman with Snake, Balancer and Tamer with
+      Gymnast Set Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/circus-cartoon-characters-vector-performers-top-tent-artists-clown-acrobat-and-man-cannon-ball-trained-dogs-juggler-magician-or-trapeze-girl-woman-with-snake-balancer-and-tamer-with-gymnast-set/414010057.
+    </p>
+    <p>
+      VectorBum. n.d. ‘Cartoon Circus Artists. Entertainment Workers. Trained
+      Animals. Jugglers and Jesters Amusement Show. People Juggling or Making
+      Tricks. Magician and Clown Performance. Splendid Vector Set Stock Vector’.
+      Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/cartoon-circus-artists-entertainment-workers-trained-animals-jugglers-and-jesters-amusement-show-people-juggling-or-making-tricks-magician-and-clown-performance-splendid-vector-set/536796774.
+    </p>
+    <p>
+      WinWin. n.d. ‘Hand Draw Fruits and Vegetables. Doodle Organic Vegan
+      Tomato, Eggplant Vegetable, Tasty Fruits and Berries. Natural Veggies and
+      Fruits. Healthy Food Isolated Vector Illustration Icons Set Stock Vector’.
+      Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/hand-draw-fruits-and-vegetables-doodle-organic-vegan-tomato-eggplant-vegetable-tasty-fruits-and-berries-natural-veggies-and-fruits-healthy-food-isolated-vector-illustration-icons-set/315322357.
+    </p>
+  </div>
+
+  <div class="recipe-refs">
+    <h2>Assets used for Recipe Images</h2>
+    <p>
+      Bro Vector. n.d. ‘Summer Popsicle. Tropical Cocktail, Flamingo, Hawaiian
+      Flower, Fruits, Ice Cream, Watermelon Isolated on White. Vector
+      Illustration Stock Vector’. Adobe Stock. Accessed 6 February 2023.
+      https://stock.adobe.com/au/images/summer-popsicle-tropical-cocktail-flamingo-hawaiian-flower-fruits-ice-cream-watermelon-isolated-on-white-vector-illustration/534725388.
+    </p>
+    <p>
+      E. n.d. ‘Dinner Ware Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/dinner-ware/81645911.
+    </p>
+    <p>
+      oncombuntung. n.d. ‘Frittata Illustration Stock Vector’. Adobe Stock.
+      Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/frittata-illustration/184237502.
+    </p>
+    <p>
+      orangereebok. n.d. ‘Download Waffle Icons Vector for Free’. Vecteezy.
+      Accessed 30 January 2023.
+      https://www.vecteezy.com/vector-art/142693-waffle-icons-vector.
+    </p>
+    <p>
+      stockakia. n.d. ‘Bowls of Avocado Guacamole Dip, Tomato Salsa, Cheese
+      Sauce and Nachos Chips. Vector Illustration Stock Vector’. Adobe Stock.
+      Accessed 6 February 2023a.
+      https://stock.adobe.com/au/images/bowls-of-avocado-guacamole-dip-tomato-salsa-cheese-sauce-and-nachos-chips-vector-illustration/344418298.
+    </p>
+    <p>
+      stockakia.n.d. ‘Taco on White Background. Vector Illustration Stock
+      Vector’. Adobe Stock. Accessed 6 February 2023b.
+      https://stock.adobe.com/au/images/taco-on-white-background-vector-illustration/104945924.
+    </p>
+    <p>
+      Tveitan, Ekaterina. n.d. ‘Guacamole In The Bowl With Avocado And Nachos
+      Food Vector Illustration In Flat Style Stock Vector’. Adobe Stock.
+      Accessed 6 February 2023.
+      https://stock.adobe.com/au/images/guacamole-in-the-bowl-with-avocado-and-nachos-food-vector-illustration-in-flat-style/554090102.
+    </p>
+    <p>
+      Vector Tradition. n.d. ‘Italian Cuisine Menu Vector Chicken Salad with
+      Pasta and Vegetables, Omelette Frittata, Pasta Salad with Cream Sauce,
+      Amaretti Cookies. Cheese Pie Crosstata, Creamy Polenta and Tuna Salad
+      Italy Meals Stock Vector’. Adobe Stock. Accessed 6 February 2023.
+      https://stock.adobe.com/au/images/italian-cuisine-menu-vector-chicken-salad-with-pasta-and-vegetables-omelette-frittata-pasta-salad-with-cream-sauce-amaretti-cookies-cheese-pie-crosstata-creamy-polenta-and-tuna-salad-italy-meals/560507139.
+    </p>
+  </div>
+
+  <div class="superfood-ref">
+    <h2>Assets used for superfood Images</h2>
+    <p>
+      anitafiana. n.d. ‘Watermelon Vector Pack Illustration Stock Vector’. Adobe
+      Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/watermelon-vector-pack-illustration/356848424.
+    </p>
+    <p>
+      Ansty art. n.d. ‘Cartoon Egg Isolated on White Background. Set of Fried,
+      Boiled, Half, Sliced Eggs. Vector Illustration. Eggs in Various Forms.
+      Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/cartoon-egg-isolated-on-white-background-set-of-fried-boiled-half-sliced-eggs-vector-illustration-eggs-in-various-forms/106864245.
+    </p>
+    <p>
+      FARBAI. n.d. ‘Cocoa Powder in Sack Vector Isolated Illustration Stock
+      Vector’. Adobe Stock. Accessed 6 February 2023.
+      https://stock.adobe.com/au/images/cocoa-powder-in-sack-vector-isolated-illustration/546150647.
+    </p>
+    <p>
+      FARBAI. n.d. ‘Piece of Tofu Vector Isolated Stock Vector’. Adobe Stock.
+      Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/piece-of-tofu-vector-isolated/229511308.
+    </p>
+    <p>
+      Jemastock. n.d. ‘Broccoli Vegetable Fresh Farm Healthy Food Stock Vector’.
+      Adobe Stock. Accessed 29 January 2023a.
+      https://stock.adobe.com/au/images/broccoli-vegetable-fresh-farm-healthy-food/165089086.
+    </p>
+    <p>
+      Jemastock n.d. ‘Cocoa Plant Fruits Stock Vector’. Adobe Stock. Accessed 29
+      January 2023b.
+      https://stock.adobe.com/au/images/cocoa-plant-fruits/558037901.
+    </p>
+    <p>
+      MoreVector. n.d. ‘Tofu. Vector Color Flat Illustration Isolated on White
+      Background. Stock Vector’. Adobe Stock. Accessed 6 February 2023.
+      https://stock.adobe.com/au/images/tofu-vector-color-flat-illustration-isolated-on-white-background/335005229.
+    </p>
+    <p>
+      Vectorvstocker. n.d. ‘Avocado Pieces Set Isolated on White Background
+      Design Element Organic Food Vector. Stock Vector’. Adobe Stock. Accessed
+      29 January 2023.
+      https://stock.adobe.com/au/images/avocado-pieces-set-isolated-on-white-background-design-element-organic-food-vector/110383511.
+    </p>
+    <p>
+      Yuliia. n.d. ‘Whole and Piece of Broccoli Isolated on White Background.
+      Vegan Food Vector Vegetable Icons in a Trendy Cartoon Style. Healthy Food
+      Concept. Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/whole-and-piece-of-broccoli-isolated-on-white-background-vegan-food-vector-vegetable-icons-in-a-trendy-cartoon-style-healthy-food-concept/420242181.
+    </p>
+  </div>
+  <div class="other-ref">
+    <h2>other Assets used in the website</h2>
+    <p>
+      adi. n.d. ‘Fresh Fruit Initial Letter f Logo Design Stock Vector’. Adobe
+      Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/fresh-fruit-initial-letter-f-logo-design/514108261.
+    </p>
+    <p>
+      Alexander. n.d. ‘Green Check Mark Icon. Check Mark Vector Icon. Checkmark
+      Illustration. Vector Symbols Set ,Green Checkmark Isolated on White
+      Background. Correct Vote Choise Isolated Symbol. Stock Vector’. Adobe
+      Stock. Accessed 6 February 2023.
+      https://stock.adobe.com/au/images/green-check-mark-icon-check-mark-vector-icon-checkmark-illustration-vector-symbols-set-green-checkmark-isolated-on-white-background-correct-vote-choise-isolated-symbol/521883763.
+    </p>
+    <p>
+      Dutko, Liudmila. n.d. ‘Confused Person Surrounded by Question Marks Stock
+      Vector’. Adobe Stock. Accessed 6 February 2023.
+      https://stock.adobe.com/au/images/confused-person-surrounded-by-question-marks/458630388.
+    </p>
+    <p>
+      FafoArts. n.d. ‘Speech Bubbles Stock Vector’. Adobe Stock. Accessed 6
+      February 2023. https://stock.adobe.com/au/images/speech-bubbles/50117847.
+    </p>
+    <p>
+      grgroup. n.d. ‘Party Garland Hanging Isolated Icon Stock Vector’. Adobe
+      Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/party-garland-hanging-isolated-icon/285724419.
+    </p>
+    <p>
+      Gstudio. n.d. ‘Fairytale Magic Wand Fantastic Isolated Icon Vector
+      Illustration Design Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/fairytale-magic-wand-fantastic-isolated-icon-vector-illustration-design/296332948.
+    </p>
+    <p>
+      Nick. n.d. ‘Hand of Mickey Mouse, Finger Hand of Mickey, Hand of Mickey
+      Set in Colors Eps10 Stock Vector’. Adobe Stock. Accessed 6 February 2023.
+      https://stock.adobe.com/au/images/hand-of-mickey-mouse-finger-hand-of-mickey-hand-of-mickey-set-in-colors-eps10/510039685.
+    </p>
+    <p>
+      sudowoodo. n.d. ‘Cute Cartoon Berries Set Stock Vector’. Adobe Stock.
+      Accessed 29 January 2023.
+      https://stock.adobe.com/au/images/cute-cartoon-berries-set/330516138.
+    </p>
+  </div>
 </div>
 <%- include('components/footer') %>
