imports newly created css files in main.css

--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -5,4 +5,5 @@
 @import "quiz.css";
 @import "recipes-superfoods.css";
 @import "singlerecipe.css";
-@import "superfood.css";
+@import "fourOfour.css";
+@import "character.css";
