adds html for 404 animation

--- a/frontend/views/fourOfour.ejs
+++ b/frontend/views/fourOfour.ejs
@@ -1,3 +1,40 @@
 <%- include('components/header') %> <%- include('components/loading') %>
-<div class="page-content" id="fourOfour-page"></div>
+<div class="page-content" id="fourOfour-page">
+  <!-- markup code for spiders inspired by and re-produced from: https://codepen.io/webcrafterscz/pen/EGYOxa  -->
+  <div class="spider">
+    <div class="spiderweb"></div>
+    <div class="body">
+      <div class="eye left"></div>
+      <div class="eye right"></div>
+    </div>
+    <div class="legs left">
+      <div class="leg"></div>
+      <div class="leg"></div>
+      <div class="leg"></div>
+    </div>
+    <div class="legs right">
+      <div class="leg"></div>
+      <div class="leg"></div>
+      <div class="leg"></div>
+    </div>
+  </div>
+
+  <div class="spider">
+    <div class="spiderweb"></div>
+    <div class="body">
+      <div class="eye left"></div>
+      <div class="eye right"></div>
+    </div>
+    <div class="legs left">
+      <div class="leg"></div>
+      <div class="leg"></div>
+      <div class="leg"></div>
+    </div>
+    <div class="legs right">
+      <div class="leg"></div>
+      <div class="leg"></div>
+      <div class="leg"></div>
+    </div>
+  </div>
+</div>
 <%- include('components/footer') %>
