shows header for all pages except the 404 page

--- a/frontend/views/fourOfour.ejs
+++ b/frontend/views/fourOfour.ejs
@@ -1,4 +1,5 @@
-<%- include('components/header') %> <%- include('components/loading') %>
+<%- include('components/header', { header: false }) %> <%-
+include('components/loading') %>
 <div class="page-content" id="fourOfour-page">
   <!-- markup code for spiders inspired by and re-produced from: https://codepen.io/webcrafterscz/pen/EGYOxa  -->
   <div class="spider">
