--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -1,4 +1,5 @@
-<%- include('components/header') %> <%- include('components/loading') %>
+<%- include('components/header', { header: true }) %> <%-
+include('components/loading') %>
 <div class="page-content">
   <section id="home">
     <div class="item1" data-aos="slide-right" data-aos-duration="1000">
