--- a/frontend/views/recipe.ejs
+++ b/frontend/views/recipe.ejs
@@ -1,4 +1,5 @@
-<%- include('components/header') %><%- include('components/loading') %>
+<%- include('components/header', { header: true }) %><%-
+include('components/loading') %>
 <div class="page-content" id="single-recipe-page">
   <!-- For loop to itereate all recipes -->
   <% recipes.forEach(function(recipe) { %>
