--- a/frontend/views/recipes.ejs
+++ b/frontend/views/recipes.ejs
@@ -1,4 +1,5 @@
-<%- include('components/header') %> <%- include('components/loading') %>
+<%- include('components/header', { header: true }) %> <%-
+include('components/loading') %>
 <div class="page-content" id="recipes-page">
   <h1>Recipes</h1>
   <p>
