--- a/frontend/views/references.ejs
+++ b/frontend/views/references.ejs
@@ -1,4 +1,5 @@
-<%- include('components/header') %> <%- include('components/loading') %>
+<%- include('components/header', { header: true }) %> <%-
+include('components/loading') %>
 <div class="page-content reference-list">
   <h1>References</h1>
   <p class="note">
