--- a/frontend/views/superfoodcircus.ejs
+++ b/frontend/views/superfoodcircus.ejs
@@ -1,4 +1,5 @@
-<%- include('components/header') %> <%- include('components/loading') %>
+<%- include('components/header', { header: true }) %> <%-
+include('components/loading') %>
 <div class="page-content" id="superfood-circus-page">
   <h1>Superfood Circus</h1>
   <p>
