--- a/frontend/views/fourOfour.ejs
+++ b/frontend/views/fourOfour.ejs
@@ -37,5 +37,17 @@ include('components/loading') %>
       <div class="leg"></div>
     </div>
   </div>
+
+  <div class="message-board">
+    <h1>Yikes!</h1>
+    <p>
+      It looks like you've stumbled into the wrong tent. Quick, teleport back to
+      the main circus!
+    </p>
+    <a class="primary-btn btn" href="/"
+      >Go Back To Main Circus!
+      <div class="arrow-box"><span class="arrow">👉🏼</span></div>
+    </a>
+  </div>
 </div>
 <%- include('components/footer') %>
