changes 404 background img to decrease file size

--- a/frontend/public/css/fourOfour.css
+++ b/frontend/public/css/fourOfour.css
@@ -1,5 +1,5 @@
 #fourOfour-page {
-  background-image: url(../img/404-background.png);
+  background-image: url(../img/404-background.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
