--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -1,8 +1,6 @@
 <%- include('components/header') %><%- include('components/loading') %>
 <div class="page-content" id="single-character-page">
 
-    <!-- Recipe section -->
-  <section class="recipe">
     <!-- Name and description elements -->
     <h2><%= character.intro %></h2>
     <div class="char">
@@ -15,8 +13,6 @@
     <h1><%= character.name %></h1>
     <h2><%= character.superfood</h2>
 
-
-
-    </section>
-
 </div>
+
+<%- include('components/footer') %>
