removes text bubbles from homepage

--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -23,21 +23,7 @@ include('components/loading') %>
       data-aos-duration="1500"
       data-aos-delay="400"
     >
-      <div class="circle-gradient watermelon">
-        <div class="text-bubble">
-          <img
-            class="left-bubble"
-            src="../public/img/bubble-left.png"
-            alt="text bubble that reads click me"
-          />
-          <img
-            class="right-bubble"
-            src="../public/img/bubble-right.png"
-            alt="text bubble that reads click me"
-          />
-          <span>Click Me!</span>
-        </div>
-      </div>
+      <div class="circle-gradient watermelon"></div>
       <div class="character-item">
         <div class="card character">
           <div class="face front"></div>
@@ -52,16 +38,7 @@ include('components/loading') %>
       data-aos-duration="1500"
       data-aos-delay="800"
     >
-      <div class="circle-gradient yellow">
-        <div class="text-bubble">
-          <img
-            class="right-bubble"
-            src="../public/img/bubble-right.png"
-            alt="text bubble that reads click me"
-          />
-          <span>Click Me!</span>
-        </div>
-      </div>
+      <div class="circle-gradient yellow"></div>
       <div class="food-item">
         <div class="card food">
           <div class="face front"></div>
