--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -335,6 +335,38 @@ section {
   }
 }
 
+/* Pop-up overlay dialog styles */
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.popup {
+  text-align: center;
+  width: 550px;
+  height: auto;
+  background: var(--background-blue);
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: var(--base-box-shadow);
+}
+
+.popup p {
+  padding: 20px 0;
+}
+
+.popup .primary-btn {
+  text-transform: uppercase;
+}
+
 /*  glowing circles styling */
 .circle-gradient {
   width: 100%;
