--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -367,6 +367,12 @@ section {
   text-transform: uppercase;
 }
 
+@media only screen and (max-width: 600px) {
+  .popup {
+    width: 90%;
+  }
+}
+
 /*  glowing circles styling */
 .circle-gradient {
   width: 100%;
