--- a/frontend/views/recipe.ejs
+++ b/frontend/views/recipe.ejs
@@ -74,6 +74,14 @@ include('components/loading') %>
       src="<%= recipe.characterImg %>"
       alt="Character image"
     />
+    <div class="arrow-btn">
+      <a href="/recipes"
+        ><p>All Recipes</p>
+        <img
+          src="../public/img/this-way-left.png"
+          alt="arrow pointing to the left"
+      /></a>
+    </div>
   </section>
 </div>
 
