--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -51,6 +51,15 @@ a:hover {
   color: var(--vita-yellow);
 }
 
+.arrow-btn {
+  text-align: center;
+}
+
+.arrow-btn p {
+  font-family: var(--heading-font-family);
+  font-size: 1.4em;
+}
+
 /* Primary button styles inspired by and re-produced from: https://codepen.io/kocsten/pen/rggjXp 
 and: https://codepen.io/foxeisen/pen/bqZxLa  */
 .primary-btn {
