--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -60,6 +60,11 @@ a:hover {
   font-size: 1.4em;
 }
 
+.arrow-btn img {
+  width: 230px;
+  height: auto;
+}
+
 /* Primary button styles inspired by and re-produced from: https://codepen.io/kocsten/pen/rggjXp 
 and: https://codepen.io/foxeisen/pen/bqZxLa  */
 .primary-btn {
