--- a/frontend/public/css/singlerecipe.css
+++ b/frontend/public/css/singlerecipe.css
@@ -47,9 +47,11 @@
 }
 
 #single-recipe-page .arrow-btn {
-  position: absolute;
-  bottom: 30px;
-  left: 50px;
+  grid-column: 1;
+  grid-row: 3;
+  justify-self: start;
+  align-self: end;
+  margin-left: 30px;
 }
 
 /* Post-it styles inspired by and re-produced from: https://codepen.io/jweden/pen/kGBBpM */
@@ -224,36 +226,48 @@
 
 @media only screen and (max-width: 1250px) {
   .recipe {
-    grid-template-rows: repeat(4, auto);
+    grid-template-rows: repeat(5, auto);
     grid-template-columns: repeat(2, auto);
     padding-top: 200px;
   }
 
-  .recipe h1 {
+  #single-recipe-page .arrow-btn {
     grid-column: 1/3;
     grid-row: 1;
+    margin: 30px;
   }
 
-  .recipe h2 {
-    padding: 10px 0 0 0;
+  #single-recipe-page .arrow-btn img {
+    width: 180px;
+  }
+
+  #single-recipe-page .arrow-btn p {
+    font-size: 1em;
+  }
+
+  .recipe h1 {
     grid-column: 1/3;
     grid-row: 2;
   }
 
-  .post-it {
-    grid-column: 1;
+  .recipe h2 {
+    grid-column: 1/3;
     grid-row: 3;
+  }
+
+  .post-it {
     margin-bottom: 0;
+    grid-row: 4;
   }
 
   .character-img {
     grid-column: 2;
-    grid-row: 3;
+    grid-row: 4;
   }
 
   .notebook-paper {
     grid-column: 1/3;
-    grid-row: 4;
+    grid-row: 5;
     width: 70%;
   }
 }
