fixes errors and updates reference list

--- a/frontend/views/references.ejs
+++ b/frontend/views/references.ejs
@@ -246,6 +246,13 @@ include('components/loading') %>
       Accessed 29 January 2023.
       https://stock.adobe.com/au/images/cute-cartoon-berries-set/330516138.
     </p>
+    <p>
+      Vector Tradition. n.d. ‘Circus Carnival Signs and Signboards, Fair Show
+      Welcome Banners, Vector Direction Pointers. Circus Funfair Carnival Ticket
+      Booth Poster with Finger Arrow Signboard to Lions or Tigers Magic Show
+      Stock Vector’. Adobe Stock. Accessed 10 February 2023.
+      https://stock.adobe.com/au/images/circus-carnival-signs-and-signboards-fair-show-welcome-banners-vector-direction-pointers-circus-funfair-carnival-ticket-booth-poster-with-finger-arrow-signboard-to-lions-or-tigers-magic-show/525216337.
+    </p>
   </div>
   <div class="404-ref">
     <h2>Assets used on the 404 page</h2>
