--- a/frontend/public/css/character.css
+++ b/frontend/public/css/character.css
@@ -1,13 +1,59 @@
 /*  Character page styling */
 
-#single-character-page {
+/* *********************************** Grid container ************************************** */
+.page-content {
+    margin: auto;
+    padding-top: 180px ;
     display: grid;
-    width: 90%;
-    grid-template-columns: 15% auto 15%;
-
+    width: 70%;
+    height: 100vh;
+    grid-template-columns: 70% 30%;
 }
 
-.char .char-image{
-    height: 300px;
-    grid-column: 2;
+/* *********************************** Grid items ******************************************* */
+.character-content, .recipe-content {
+    height: 100%;
 }
+
+.title {
+    height: 5vh;
+}
+
+.character-img {
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+    height: 55vh;
+}
+
+.superfood-data {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.text-data {
+    padding-left: 20%;
+}
+
+.superfood-data img {
+    height: 100px;
+}
+
+.character-img img {
+    height: 100%;
+}
+
+.recipe-content {
+  padding: 30px 0;
+  display: flex;
+  align-items: end;
+}
+
+.recipe-content img:hover  {
+    scale: 1.1;
+    opacity: .8;
+    cursor: pointer;
+}
+
+
