Created Vita-Fresh page

--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -7,7 +7,7 @@
   <% if(id.trim() == character.id) { %>
 
       <!-- Grid container for page layout -->
-      <div class="page-content">
+      <div class="character-page-content">
 
           <!-- Grid column 1 - character section  -->
           <div class="character-content">
