--- a/frontend/views/components/header.ejs
+++ b/frontend/views/components/header.ejs
@@ -41,9 +41,7 @@
         <!-- Link to vitafresh -->
         <li class="link vitafresh">
           <a
-            href="https://www.google.com/"
-            target="_blank"
-            rel="noopener noreferrer"
+            href="/vita-fresh"
             >vitafresh</a
           >
         </li>
@@ -78,9 +76,7 @@
           <!-- Link to vitafresh -->
           <li class="link vitafresh">
             <a
-              href="https://www.google.com/"
-              target="_blank"
-              rel="noopener noreferrer"
+              href="/vita-fresh"
               >vitafresh</a
             >
           </li>
