adds 'don't show again' option on pop-up dialog

--- a/frontend/views/recipe.ejs
+++ b/frontend/views/recipe.ejs
@@ -13,6 +13,10 @@ include('components/loading') %>
         Okay, Let's Get Cooking!
         <div class="arrow-box"><span class="arrow">👉🏼</span></div>
       </div>
+      <div>
+        <input type="checkbox" id="dont-show-again" />
+        <label for="dont-show-again">Don't show again</label>
+      </div>
     </div>
   </div>
   <!-- For loop to itereate all recipes -->
