--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -40,7 +40,7 @@
   <div class="recipe-content">
     <div class="recipe-item">
       <p><%= character.superfood %> Recipes</p>
-      <a href="/recipes"
+      <a href="/recipes/<%= character.superfoodId %>"
         ><img src="../public/img/this-way-right.png" alt="Recipe Arrow"
       /></a>
     </div>
