starts quiz page styling

--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -58,6 +58,7 @@ a:hover {
 .arrow-btn p {
   font-family: var(--heading-font-family);
   font-size: 1.4em;
+  text-transform: uppercase;
 }
 
 .arrow-btn img {
