--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -80,7 +80,7 @@ include('components/loading') %>
       </p>
       <a
         class="primary-btn btn"
-        href="https://www.google.com/"
+        href="/vita-fresh"
         target="_blank"
         rel="noopener noreferrer"
         >Visit the vitafresh site!
