--- a/frontend/views/vita-fresh.ejs
+++ b/frontend/views/vita-fresh.ejs
@@ -1,8 +1,32 @@
-<%- include('components/header', { header: true }) %>
+<%- include('components/header', { header: false }) %>
 
 <!-- VitaFresh page content wrapper -->
-<div class="vitafresh-content">
-    <img src="../img/vitafresh-logo.png" alt="VitaFresh Log">
+<div class="vitafresh-page">
+  <div class="vitafresh-content">
+    <img src="../img/vitafresh-logo.png" alt="VitaFresh Logo" />
+    <p>
+      Note: VitaFun's imaginary client is VitaFresh, an independent boutique
+      grocery chain promoting fresh produce and a healthy lifestyle. While the
+      VitaFresh links on the VitaFun website would typically direct users to
+      VitaFresh's official website, it does not exist. This page serves to
+      explain the purpose of including VitaFresh links on our website. Please
+      note that this page is not part of the VitaFun project and is out of scope
+      for our team to add content or style.
+    </p>
+    <p>
+      View the complete client brief
+      <a
+        href="https://studentcurtinedu-my.sharepoint.com/:b:/g/personal/20441469_student_curtin_edu_au/EQOxcuip1Z9DqWis_cwm-iABUY6bqwUmhDxX6Rl9sNLpNA?e=NToKqU"
+        target="_blank"
+        rel="noopener noreferrer"
+        >here.
+      </a>
+    </p>
+    <p>
+      Or,
+      <a href="/">Go back to the VitaFun website. </a>
+    </p>
+  </div>
 </div>
 
 <%- include('components/footer') %>
